fix reduce whitespace between founder section and footer

--- a/style.css
+++ b/style.css
@@ -422,6 +422,6 @@ footer ul {
 
 @media only screen and (min-width: 1440px) {
     footer {
-        margin-top: -10rem;
+        margin-top: -15rem;
     }
 }
